@@ -3,19 +3,16 @@ package com.medisync.medisync.adapters.out.persistence.impl;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
+import org.springframework.transaction.annotation.Transactional;
 
-import com.medisync.medisync.adapters.out.persistence.entities.GestorEntity;
 import com.medisync.medisync.adapters.out.persistence.entities.InventarioEntity;
-import com.medisync.medisync.adapters.out.persistence.entities.MedicamentoEntity;
 import com.medisync.medisync.adapters.out.persistence.jpa.InventarioJpaRepository;
 import com.medisync.medisync.adapters.out.persistence.mappers.InventarioEntityMapper;
 import com.medisync.medisync.domain.models.Inventario;
 import com.medisync.medisync.domain.repositories.IInventarioRepository;
-
-import jakarta.persistence.EntityManager;
-import jakarta.persistence.PersistenceContext;
 
 @Repository
 public class InventarioRepositoryImpl implements IInventarioRepository {
@@ -23,54 +20,47 @@ public class InventarioRepositoryImpl implements IInventarioRepository {
     private final InventarioJpaRepository jpaRepository;
     private final InventarioEntityMapper mapper;
 
-    @PersistenceContext
-    private EntityManager entityManager;
-
     public InventarioRepositoryImpl(InventarioJpaRepository jpaRepository,
-                                     InventarioEntityMapper mapper) {
+                                    InventarioEntityMapper mapper) {
         this.jpaRepository = jpaRepository;
         this.mapper = mapper;
     }
 
     @Override
+    @Transactional
     public Inventario save(Inventario inventario) {
-        InventarioEntity entity = InventarioEntity.builder()
-                .id(inventario.getId())
-                .medicamento(entityManager.getReference(MedicamentoEntity.class, inventario.getMedicamento().getId()))
-                .gestor(entityManager.getReference(GestorEntity.class, inventario.getGestor().getId()))
-                .cantidad(inventario.getCantidad())
-                .precioUnitario(inventario.getPrecioUnitario())
-                .build();
+        InventarioEntity entity = mapper.toEntity(inventario);
 
         InventarioEntity guardado = jpaRepository.save(entity);
-        InventarioEntity completo = jpaRepository.findById(guardado.getId())
-                .orElseThrow(() -> new RuntimeException("Error al recuperar inventario guardado"));
-        return mapper.toDomain(completo);
+
+        return mapper.toDomain(guardado);
     }
 
     @Override
+    @Transactional
     public void deleteById(UUID id) {
+        if (!jpaRepository.existsById(id)) {
+            throw new RuntimeException("Inventario no encontrado con ID: " + id);
+        }
         jpaRepository.deleteById(id);
     }
 
     @Override
     public Optional<Inventario> findById(UUID id) {
-        return jpaRepository.findById(id).map(mapper::toDomain);
+        return jpaRepository.findById(id)
+                .map(mapper::toDomain);
     }
 
     @Override
     public List<Inventario> findAll() {
-        return jpaRepository.findAll().stream().map(mapper::toDomain).toList();
+        return jpaRepository.findAll().stream()
+                .map(mapper::toDomain)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<Inventario> findByGestorId(UUID gestorId) {
-        return jpaRepository.findByGestorId(gestorId).stream().map(mapper::toDomain).toList();
+    public Optional<Inventario> findByGestorId(UUID gestorId) {
+        return jpaRepository.findByGestorId(gestorId)
+                .map(mapper::toDomain);
     }
-
-    @Override
-    public List<Inventario> findByMedicamentoIdAndGestorId(UUID medicamentoId, UUID gestorId) {
-        return jpaRepository.findByMedicamentoIdAndGestorId(medicamentoId, gestorId)
-            .stream().map(mapper::toDomain).toList();
-}
 }
