@@ -4,24 +4,20 @@ import java.math.BigDecimal;
 import java.util.List;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
-import com.medisync.medisync.domain.valueobjects.Nombre;
+import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import com.medisync.medisync.domain.enums.EstadoGestor;
 import com.medisync.medisync.domain.models.Gestor;
 import com.medisync.medisync.domain.models.Inventario;
 import com.medisync.medisync.domain.models.Medicamento;
 import com.medisync.medisync.domain.repositories.IInventarioRepository;
+import com.medisync.medisync.domain.valueobjects.*;
 
 @ExtendWith(MockitoExtension.class)
 class ObtenerInventariosUseCaseTest {
@@ -35,22 +31,66 @@ class ObtenerInventariosUseCaseTest {
     @Test
     void deberiaRetornarListaDeInventarios() {
         // ARRANGE
-        List<Inventario> inventarios = List.of(
-                Inventario.builder()
-                        .id(UUID.randomUUID())
-                        .medicamento(Medicamento.builder().id(UUID.randomUUID()).nombre("Ibuprofeno").build())
-                        .gestor(Gestor.builder().id(UUID.randomUUID()).nombre(new Nombre("Farmacia Central")).build())
-                        .cantidad(50)
-                        .precioUnitario(new BigDecimal("12500.00"))
-                        .build(),
-                Inventario.builder()
-                        .id(UUID.randomUUID())
-                        .medicamento(Medicamento.builder().id(UUID.randomUUID()).nombre("Amoxicilina").build())
-                        .gestor(Gestor.builder().id(UUID.randomUUID()).nombre(new Nombre("Droguería San José")).build())
-                        .cantidad(30)
-                        .precioUnitario(new BigDecimal("8500.00"))
-                        .build()
+        UUID gestorId1 = UUID.randomUUID();
+        UUID gestorId2 = UUID.randomUUID();
+
+        // Crear Value Objects
+        Nombre nombreGestor1 = Nombre.of("Farmacia Central");
+        Nombre nombreGestor2 = Nombre.of("Droguería San José");
+
+        // Crear gestores con estado ACTIVO
+        Gestor gestor1 = Gestor.builder()
+                .id(gestorId1)
+                .nombre(nombreGestor1)
+                .estado(EstadoGestor.ACTIVO)
+                .build();
+
+        Gestor gestor2 = Gestor.builder()
+                .id(gestorId2)
+                .nombre(nombreGestor2)
+                .estado(EstadoGestor.ACTIVO)
+                .build();
+
+        // Crear medicamentos
+        Medicamento ibuprofeno = Medicamento.builder()
+                .id(UUID.randomUUID())
+                .nombre("Ibuprofeno")
+                .requiereFormula(false)
+                .build();
+
+        Medicamento amoxicilina = Medicamento.builder()
+                .id(UUID.randomUUID())
+                .nombre("Amoxicilina")
+                .requiereFormula(true)
+                .build();
+
+        // Crear items de inventario
+        ItemInventario item1 = new ItemInventario(
+                ibuprofeno,
+                Cantidad.of(50),
+                Precio.of(BigDecimal.valueOf(12500.00))
         );
+
+        ItemInventario item2 = new ItemInventario(
+                amoxicilina,
+                Cantidad.of(30),
+                Precio.of(BigDecimal.valueOf(8500.00))
+        );
+
+        // Crear inventarios
+        Inventario inventario1 = Inventario.builder()
+                .id(UUID.randomUUID())
+                .gestor(gestor1)
+                .items(List.of(item1))
+                .build();
+
+        Inventario inventario2 = Inventario.builder()
+                .id(UUID.randomUUID())
+                .gestor(gestor2)
+                .items(List.of(item2))
+                .build();
+
+        List<Inventario> inventarios = List.of(inventario1, inventario2);
 
         when(inventarioRepository.findAll()).thenReturn(inventarios);
 
@@ -58,10 +98,32 @@ class ObtenerInventariosUseCaseTest {
         List<Inventario> resultado = obtenerInventariosUseCase.ejecutar();
 
         // ASSERT
-        assertNotNull(resultado);
         assertEquals(2, resultado.size());
-        assertEquals("Ibuprofeno", resultado.get(0).getMedicamento().getNombre());
-        assertEquals("Droguería San José", resultado.get(1).getGestor().getNombre().valor());
+
+        // Verificar primer inventario
+        Inventario primero = resultado.getFirst();
+        assertEquals(gestorId1, primero.getGestor().getId());
+        assertEquals("Farmacia Central", primero.getGestor().getNombre().valor());
+        assertEquals(1, primero.getItems().size());
+        assertEquals("Ibuprofeno", primero.getItems().getFirst().medicamento().getNombre());
+        assertEquals(50, primero.getItems().getFirst().cantidad().valor());
+
+        // ✅ Usar compareTo para BigDecimal (ignora escala)
+        assertEquals(0, BigDecimal.valueOf(12500.00)
+                .compareTo(primero.getItems().getFirst().precioUnitario().valor()));
+
+        // Verificar segundo inventario
+        Inventario segundo = resultado.get(1);
+        assertEquals(gestorId2, segundo.getGestor().getId());
+        assertEquals("Droguería San José", segundo.getGestor().getNombre().valor());
+        assertEquals(1, segundo.getItems().size());
+        assertEquals("Amoxicilina", segundo.getItems().getFirst().medicamento().getNombre());
+        assertEquals(30, segundo.getItems().getFirst().cantidad().valor());
+
+        // ✅ Usar compareTo para BigDecimal (ignora escala)
+        assertEquals(0, BigDecimal.valueOf(8500.00)
+                .compareTo(segundo.getItems().getFirst().precioUnitario().valor()));
+
         verify(inventarioRepository, times(1)).findAll();
     }
 
@@ -82,13 +144,39 @@ class ObtenerInventariosUseCaseTest {
     @Test
     void deberiaMantenerPropiedadesDeCadaInventario() {
         // ARRANGE
-        UUID id = UUID.randomUUID();
+        UUID inventarioId = UUID.randomUUID();
+        UUID medicamentoId = UUID.randomUUID();
+        UUID gestorId = UUID.randomUUID();
+
+        // Crear Value Objects
+        Nombre nombreGestor = Nombre.of("Farmacia Central");
+
+        // Crear gestor con estado ACTIVO
+        Gestor gestor = Gestor.builder()
+                .id(gestorId)
+                .nombre(nombreGestor)
+                .estado(EstadoGestor.ACTIVO)
+                .build();
+
+        // Crear medicamento
+        Medicamento ibuprofeno = Medicamento.builder()
+                .id(medicamentoId)
+                .nombre("Ibuprofeno")
+                .requiereFormula(false)
+                .build();
+
+        // Crear item de inventario
+        ItemInventario item = new ItemInventario(
+                ibuprofeno,
+                Cantidad.of(50),
+                Precio.of(BigDecimal.valueOf(12500.00))
+        );
+
+        // Crear inventario
         Inventario inventario = Inventario.builder()
-                .id(id)
-                .medicamento(Medicamento.builder().id(UUID.randomUUID()).nombre("Ibuprofeno").build())
-                .gestor(Gestor.builder().id(UUID.randomUUID()).nombre(new Nombre("Farmacia Central")).build())
-                .cantidad(50)
-                .precioUnitario(new BigDecimal("12500.00"))
+                .id(inventarioId)
+                .gestor(gestor)
+                .items(List.of(item))
                 .build();
 
         when(inventarioRepository.findAll()).thenReturn(List.of(inventario));
@@ -97,10 +185,21 @@ class ObtenerInventariosUseCaseTest {
         List<Inventario> resultado = obtenerInventariosUseCase.ejecutar();
 
         // ASSERT
-        assertEquals(id, resultado.getFirst().getId());
-        assertEquals(50, resultado.getFirst().getCantidad());
-        assertEquals(new BigDecimal("12500.00"), resultado.getFirst().getPrecioUnitario());
-        assertEquals("Ibuprofeno", resultado.getFirst().getMedicamento().getNombre());
-        assertEquals("Farmacia Central", resultado.getFirst().getGestor().getNombre().valor());
+        Inventario resultadoInventario = resultado.getFirst();
+        assertEquals(inventarioId, resultadoInventario.getId());
+        assertEquals(gestorId, resultadoInventario.getGestor().getId());
+        assertEquals("Farmacia Central", resultadoInventario.getGestor().getNombre().valor());
+
+        // Verificar item
+        assertEquals(1, resultadoInventario.getItems().size());
+        assertEquals(medicamentoId, resultadoInventario.getItems().getFirst().medicamento().getId());
+        assertEquals("Ibuprofeno", resultadoInventario.getItems().getFirst().medicamento().getNombre());
+        assertEquals(50, resultadoInventario.getItems().getFirst().cantidad().valor());
+
+        // ✅ Usar compareTo para BigDecimal (ignora escala)
+        assertEquals(0, BigDecimal.valueOf(12500.00)
+                .compareTo(resultadoInventario.getItems().getFirst().precioUnitario().valor()));
+
+        verify(inventarioRepository, times(1)).findAll();
     }
 }
